# feedr

./: .gitignore  Cargo.toml  Justfile  README.md  config.example.toml  data.sqlite  diesel.toml  flake.nix  package.nix  rustfmt.toml  utils.sql
data/r1/: dump.rdb
feedr-core/: Cargo.toml
feedr-core/src/: import.rs  lib.rs  scheduler.rs
feedr-core/src/models/: mod.rs  schema.rs
feedr-dev/: Cargo.toml
feedr-dev/src/: main.rs
feedr-server/: Cargo.toml
feedr-server/src/: config.rs  main.rs
feedr-server/src/api/: mod.rs
feedr-server/src/auth/: mod.rs
migrations/2025-04-11-181701_create_feeds/: down.sql  up.sql
src/: app.rs  config.rs  error.rs  fetcher.rs  import.rs  main.rs  scheduler.rs  utils.rs
src/api/: entries.rs  feeds.rs  mod.rs
src/auth/: mod.rs
src/database/: mod.rs  models.rs  schema.patch  schema.rs
src/fetcher/: error.rs  mod.rs
src/front/: error.rs  mod.rs
src/front/api/: entries.rs  feeds.rs  mod.rs
src/front/auth/: api.rs  backend.rs  mod.rs  store.rs
src/front/web/: htmx.rs  mod.rs  templates.rs
src/models/: mod.rs  schema.rs
src/web/: mod.rs  templates.rs
static/styles/: main.css  no-js.css
templates/: _base.html  index.html  login.html  not_found.html  profile.html
