[package]
name = "feedr-server"
version = "0.0.0"
edition = "2024"

[dependencies]
askama = "0.13"
bytes = "1"
diesel-derive-newtype = "2"
eyre = "0.6"
feed-rs = "2.3.1"
opml = "1"
parking_lot = "0.12"
serde = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["v4"] }

[dependencies.axum]
version = "0.8"
features = ["json", "macros", "multipart", "tracing"]

[dependencies.diesel]
version = "2"
features = [
  "r2d2",
  "returning_clauses_for_sqlite_3_35",
  "sqlite",
  "time",
  "uuid",
]

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["rustls-tls-native-roots"]

[dependencies.tower-http]
version = "0.6"
features = ["fs", "request-id", "sensitive-headers", "tracing", "trace"]

[lints.rust]
unsafe_code = "forbid"
[lints.rustdoc]
all = "warn"
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# cargo = { level = "warn", priority = -1 }

# expect_used = "warn"
# missing_docs_in_private_items = "warn"
todo = "warn"
unwrap_used = "warn"

wildcard_imports = "allow"
