[package]
name = "feedr-server"
version = "0.0.0"
edition = "2024"

description = ""
authors = ["Milo Moisson <milo@wiro.world>"]
homepage = "https://github.com/mrnossiom/feedr"
repository = "https://github.com/mrnossiom/feedr"
license = "CECILL-2.1"

[dependencies]
askama = "0.14"
async-trait = "0.1"
axum-login = "0.17"
base64 = "0.22"
bytes = "1"
diesel-derive-newtype = "2"
diesel_migrations = { version = "2", features = ["sqlite"] }
eyre = "0.6"
feed-rs = "2"
itertools = "0.14"
opml = "1"
parking_lot = "0.12"
password-auth = "1"
rmp-serde = "1"
serde = "1"
slug = "0.1"
thiserror = "2"
time = "0.3"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tower = "0.5"
tower-cookies = "0.11"
tower-sessions = { version = "0.14", features = ["signed"] }
tower-sessions-core = { version = "0.14", features = ["deletion-task"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }

[dependencies.axum]
version = "0.8"
features = ["json", "macros", "multipart", "tracing"]

[dependencies.diesel]
version = "2"
features = [
  "r2d2",
  "postgres",
  "time",
  "uuid",
]

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["rustls-tls-native-roots"]

[dependencies.tower-http]
version = "0.6"
features = ["fs", "request-id", "sensitive-headers", "tracing", "trace"]

[lints.rust]
unsafe_code = "forbid"
[lints.rustdoc]
all = "warn"
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# cargo = { level = "warn", priority = -1 }

# expect_used = "warn"
# missing_docs_in_private_items = "warn"
todo = "warn"
unwrap_used = "warn"

wildcard_imports = "allow"
